# 3d-beacons-client

./: .dockerignore  .env.dev  .env.example  .env.local  .env.prod.template  .gitignore  .gitmodules  .isort.cfg  .pip-license-ignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Snakefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  luigi.cfg  luigi.toml  luigi_scheduler.sh  molstar_model_server.sh  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
Docker/: docker-compose.yml
Docker/app/: Dockerfile  entrypoint.sh
Docker/nginx/: nginx.conf
bio3dbeacon/: INSTALL.md  __init__.py  app.py  cli.py  config.py  luigi.cfg  main.py  models.py  qmean.py  settings.py  solr.py  tasks.py  version.py
bio3dbeacon/api/: restx.py
bio3dbeacon/data_loader/: swissmodel.py
bio3dbeacon/database/: __init__.py  models.py
bio3dbeacon/frontend/: frontend.py  routes.py
bio3dbeacons/: error.py
bio3dbeacons/api/: Dockerfile  __init__.py  constants.py  main.py  requirements.txt  utils.py
bio3dbeacons/cli/: __init__.py  __main__.py  cli.py  models.py  requirements.txt  sparql.py  utils.py
bio3dbeacons/config/: conf.ini  config.py
bio3dbeacons/nginx/: default.conf
data/cif/: P38398_1646_1859_6g2i.1.K.cif  P38398_4y2g.1.A_1646_1859.cif
data/index/: P38398_1646_1859_6g2i.1.K.json  P38398_1jm7.1.A_1_103.json  P38398_4y2g.1.A_1646_1859.json
data/metadata/: P38398_1646_1859_6g2i.1.K.json  P38398_1jm7.1.A_1_103.json
docker/cli/: Dockerfile
docker/nginx/: default.conf  start.sh
docker/web/: Dockerfile
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
example_data/: pdb1t2v.ent
migrations/versions/: 3e3a83a3b309_.py  77615a2829d4_.py  b80709a3edef_.py  ee87d846bd15_.py
resources/: 3dbeacons-1.3.0.json  3dbeacons-2.0.0.yaml  schema.json
solr/conf/: schema.xml
solr_conf/: solrconfig.xml
swagger_server/: __main__.py  swagger_server.py
swagger_server/controllers/: default_controller.py
swagger_server/models/: __init__.py  result.py  result_chains.py  result_in_complex_with.py  result_interacting_pdb_residues.py  result_residue.py  (+7 more)
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_example.py  test_flask.py  test_frontend.py  test_gh025.py  test_tasks.py  testutils.py
(+48 files in other folders)
