[metadata]
name = bio3dbeacons
description = A Python package for the 3D Beacons Client
version = attr: __version__.__version__
url = https://github.com/3D-Beacons/3d-beacons-client
keywords =
  python
  solr
  tasks
  models
  beacons
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Life Science/Structural Biology
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
packages = find_namespace:
zip_safe: False
include_package_data = True
install_requires =
  click
  exitstatus
  requests
  gemmi
  pydantic

[options.extras_require]
test =
  flake8-black
  mypy
  isort >= 5.*
  attrs
  coverage
  iniconfig
  packaging
  pluggy
  py
  pyparsing
  pytest-cov
  pytest-mock
  pytest
  toml

doc =
  sphinx
  sphinx-rtd-theme
  sphinx_markdown_tables
  recommonmark

[options.entry_points]
console_scripts =
 bio3dbeacons_cli = bio3dbeacons.cli.cli:main
